# german-spanish-english-eurobert-lemmatizer

./: .gitignore  PHASE1_PLAN.md  README.md  augment_dataset.py  augment_training_with_cefr.py  kilo.json  pyproject.toml  pyrightconfig.json  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  code-review.yml  nightly-cefr-eval.yml  sonarcloud.yml
.kilo/: kilo.json
archive/: train_stage2.py
archive/configs/: mps-stage2.toml
artifacts/: char_vocab.json  edit_trees.json  eval_report.json  exceptions.json  gold_lexicon_de.json  gold_lexicon_en.json  gold_lexicon_es.json  held_out_validation_results.json  id2label.json  id2label_top300.json  label2id.json  label2id_top300.json  lexicon.json  mps_benchmark.json  spurious_edit_de.json  spurious_edit_en.json  spurious_edit_es.json  top_edit_trees.json  upos_id2label.json  upos_label2id.json
configs/: mps-char-gen.toml  mps-full.toml  mps-stage2.toml  smoke.toml  zh-train.toml
data/handcraft/: README.md  ar_test.conllu  de_test.conllu  en_test.conllu  es_test.conllu  fr_test.conllu  nl_test.conllu  sv_test.conllu  zh_test.conllu
data/handcraft/ar/sentences/: a1_train_new_001.py  a1_train_new_002.py  a1_train_new_003.py  a1_train_new_004.py  a1_train_new_005.py  a1_val.py  a2_train_new_001.py  a2_train_new_002.py  a2_train_new_003.py  a2_train_new_004.py  a2_train_new_005.py  a2_val.py  b1_train_new_001.py  b1_train_new_002.py  b1_train_new_003.py  b1_train_new_004.py  b1_train_new_005.py  b1_val.py  b2_train_new_001.py  b2_train_new_002.py  b2_train_new_003.py  b2_train_new_004.py  b2_train_new_005.py  b2_val.py  c1_train_new_001.py  c1_train_new_002.py  c1_train_new_003.py  c1_train_new_004.py  c1_train_new_005.py  c1_val.py  c2_train_new_001.py  c2_train_new_002.py  c2_train_new_003.py  c2_train_new_004.py  c2_train_new_005.py  c2_val.py
data/handcraft/ar/train/: a1.conllu  a1_new_001.conllu  a1_new_002.conllu  a1_new_003.conllu  a1_new_004.conllu  a1_new_005.conllu  a2.conllu  a2_new_001.conllu  a2_new_002.conllu  a2_new_003.conllu  a2_new_004.conllu  a2_new_005.conllu  b1.conllu  b1_new_001.conllu  b1_new_002.conllu  b1_new_003.conllu  b1_new_004.conllu  b1_new_005.conllu  b2.conllu  (+16 more)
docs/: CHINESE_TRAINING.md  PLAN.md  RESUME.md  manual-qa.md  plan-character-level-lemma-generation.md  plan-selective-forward-stage2.md
docs/data_audit/: ar_handcraft_audit.md  de_handcraft_audit.md  en_handcraft_audit.md  es_handcraft_audit.md  findings.md  fr_handcraft_audit.md  handcraft_synthesis.md  ledger.md  nl_handcraft_audit.md  sv_handcraft_audit.md  zh_handcraft_audit.md
docs/training/: ceilings.md
scripts/: bootstrap_arm64_venv.sh  gen_a1_val_new_001.py  llm_validate_gold.py  publish_hf.py  run_validation.sh  upload_loop.sh  upload_once.py  upload_one.py
src/: analyze_errors.py  annotate_silver.py  benchmark_mps.py  build_char_vocab.py  build_labels.py  cefr_data.py  cefr_evaluation.py  char_generator.py  cli.py  conllu_reader.py  edit_trees.py  eval_context.py  eval_zh_bio.py  evaluate.py  evaluate_cefr.py  export_onnx.py  export_vocab_classifier.py  export_zh_bio_onnx.py  fetch_ud.py  generate_de_lemma_silver.py  generate_silver.py  generate_targeted_silver.py  language_assets.py  lmstudio_client.py  make_cefr_eval_dataset.py  make_char_dataset.py  make_dataset.py  make_seq2seq_dataset.py  make_vocab_dataset.py  make_zh_bio_dataset.py  merge_lora.py  model_backend.py  multitask_model.py  package_vocab_classifier.py  package_web_model.py  runtime_utils.py  train.py  train_seq2seq.py  train_stage2.py  train_vocab_classifier.py  (+3 more)
src/lemmatizer/: cli.py  config.py  languages.py
src/lemmatizer/data/: apply_validation.py  build_labels.py  byt5_dataset.py  conllu_validator.py  dataset.py  duplicate_detector.py  label_space.py  lemma_checker.py  script_guard.py  sent_id_normalizer.py  seq2seq_dataset.py  subtitle_pipeline.py  ud.py  vtt_parser.py  zh_augment.py  zh_augment2.py  zh_bio_dataset.py  zh_lexicon.py
src/lemmatizer/eval/: backends.py  cefr_data.py  cefr_eval.py  context.py  evaluate.py  evaluate_cefr.py  handcraft_eval.py  oracle_ceilings.py  zh_error_analysis.py  zh_manual_eval.py
src/lemmatizer/export/: byt5_onnx.py  multitask_onnx.py  package_web.py  zh_bio_onnx.py
src/lemmatizer/inference/: postprocess.py
src/lemmatizer/train/: __init__.py  byt5_encoder.py  byt5_lemma_model.py  grad_utils.py  mlx_multitask.py  seq2seq_lemma.py  train_byt5.py  zh_bio.py
tests/: conftest.py  test_apply_validation.py  test_byt5_dataset.py  test_cefr_eval.py  test_cli.py  test_config.py  test_conllu_validator.py  test_duplicate_detector.py  test_evaluate.py  test_evaluate_cefr.py  test_generate_silver.py  test_language_assets.py  test_languages.py  test_lemma_checker.py  test_lmstudio_client.py  test_make_cefr_eval_dataset.py  test_make_dataset.py  test_mlx_multitask_evaluate.py  test_multitask_model.py  test_postprocess_rules.py  test_script_guard.py  test_sent_id_normalizer.py  test_seq2seq_lemma.py  test_subtitle_pipeline.py  test_train_save.py  test_valid_label_masking.py  test_vocab_inventory.py
web/: demo.js  index.html  package.json  pnpm-lock.yaml  postprocess.js  postprocess.test.js
(+576 files in other folders)
