[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eurobert-lemmatizer"
version = "0.1.0"
description = "Multilingual EuroBERT lemmatizer for German, Spanish, and English"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "ml-dtypes>=0.5",
  "numpy>=1.26.0",
  "onnx>=1.18",
  "onnxruntime==1.23.1",
  "optimum>=1.21.0",
  "peft>=0.12.0",
  "scikit-learn>=1.5.0",
  "torch>=2.2.0",
  "transformers==4.48.0",
  "typer>=0.13.0",
]

[project.scripts]
eurobert-lemma = "cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "benchmark_mps",
  "build_labels",
  "cli",
  "config",
  "conllu_reader",
  "edit_trees",
  "evaluate",
  "export_onnx",
  "fetch_ud",
  "make_dataset",
  "merge_lora",
  "multitask_model",
  "package_web_model",
  "train",
]

[tool.uv]
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
