[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eurobert-lemmatizer"
version = "0.1.0"
description = "MLX-trained per-language lemmatizers with multi-backend eval"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "datasets>=2.20.0",
  "httpx>=0.27.0",
  "mlx>=0.31.2",
  "numpy>=1.26.0,<2.0",
  "onnx>=1.18",
  "onnxruntime==1.23.1",
  "openmed>=1.8.1",
  "scikit-learn>=1.5.0",
  "spacy>=3.7.0",
  "stanza>=1.13.0",
  "torch>=2.12.1",
  "transformers>=4.41.0,<4.50",
  "typer>=0.13.0",
]

[project.scripts]
eurobert-lemma = "lemmatizer.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-socket>=0.7.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.ruff]
target-version = "py313"
line-length = 100
# Data-generation scripts under data/handcraft/ embed CoNLL-U as long string
# literals. They are throwaway generators, not production code; excluding them
# from lint keeps the gate focused on src/ + tests/ + scripts/.
extend-exclude = ["data/handcraft"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

# Pre-existing long lines in retained MLX trainer/export files (moved verbatim
# during the refactor). Cleanup is tracked separately; do not let it block the
# structural refactor PR.
[tool.ruff.lint.per-file-ignores]
"src/lemmatizer/train/mlx_multitask.py" = ["E501"]
"src/lemmatizer/train/train_byt5.py" = ["E501"]
"src/lemmatizer/train/zh_bio.py" = ["E501"]
"src/lemmatizer/train/byt5_encoder.py" = ["E501"]
"src/lemmatizer/export/byt5_onnx.py" = ["E501"]
"src/lemmatizer/data/dataset.py" = ["E501"]
"scripts/publish_hf.py" = ["E501"]
"scripts/gen_a1_val_new_001.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
